--- a/template/index.html
+++ b/template/index.html
@@ -8,19 +8,22 @@
     <body>
         <h1>Real Estate Price Predictions</h1>
         <form action="{{url_for('predict')}}" method="post">
-            <input type="text" name="crim" placeholder="CRIM" required="required"/>
-            <input type="text" name="zn" placeholder="ZN" required="required"/>
-            <input type="text" name="indus" placeholder="INDUS" required="required"/>
-            <input type="text" name="chas" placeholder="CHAS" required="required"/>
-            <input type="text" name="nox" placeholder="NOX" required="required"/>
-            <input type="text" name="rm" placeholder="RM" required="required"/>
-            <input type="text" name="age" placeholder="AGE" required="required"/>
-            <input type="text" name="dis" placeholder="DIS" required="required"/>
-            <input type="text" name="rad" placeholder="RAD" required="required"/>
-            <input type="text" name="tax" placeholder="TAX" required="required"/>
-            <input type="text" name="ptratio" placeholder="PTRATIO" required="required"/>
-            <input type="text" name="b" placeholder="B" required="required"/>
-            <input type="text" name="lstat" placeholder="LSTAT" required="required"/>
+            <input type="text" name="crim" placeholder="Crime rate per capita" required="required"/>
+            <input type="text" name="zn" placeholder="Proportion of residential land zoned for lots over 
+            25,000 sq.ft." required="required"/>
+            <input type="text" name="indus" placeholder="Proportion of non-retail business acres per town" required="required"/>
+            <input type="text" name="chas" placeholder="Charles River dummy variable (= 1 if tract bounds 
+            river; 0 otherwise)" required="required"/>
+            <input type="text" name="nox" placeholder="Nitric oxides concentration (parts per 10 million)" required="required"/>
+            <input type="text" name="rm" placeholder="Average number of rooms per dwelling" required="required"/>
+            <input type="text" name="age" placeholder="Proportion of owner-occupied units built prior to 1940" required="required"/>
+            <input type="text" name="dis" placeholder="Weighted distances to five Boston employment centres" required="required"/>
+            <input type="text" name="rad" placeholder="Index of accessibility to radial highways" required="required"/>
+            <input type="text" name="tax" placeholder="Full-value property-tax rate per $10,000" required="required"/>
+            <input type="text" name="ptratio" placeholder="Pupil-teacher ratio by town" required="required"/>
+            <input type="text" name="b" placeholder="1000(Bk - 0.63)^2 where Bk is the proportion of blacks 
+            by town" required="required"/>
+            <input type="text" name="lstat" placeholder="% lower status of the population" required="required"/>
             <button type="submit" class="btn btn-primary btn-block btn-large" >Predict Price</button> 
         </form>
         <br>
