--- a/template/index.html
+++ b/template/index.html
@@ -1,33 +1,120 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Real Estate Price Prediction Model</title>
-        <link rel="stylesheet" href="{{url_for('static',filename='css/style.css')}}">
-    </head>
-    <body>
-        <h1>Real Estate Price Predictions</h1>
-        <form action="{{url_for('predict')}}" method="post">
-            <input type="text" name="crim" placeholder="Crime rate per capita" required="required"/>
-            <input type="text" name="zn" placeholder="Proportion of residential land zoned for lots over 
-            25,000 sq.ft." required="required"/>
-            <input type="text" name="indus" placeholder="Proportion of non-retail business acres per town" required="required"/>
-            <input type="text" name="chas" placeholder="Charles River dummy variable (= 1 if tract bounds 
-            river; 0 otherwise)" required="required"/>
-            <input type="text" name="nox" placeholder="Nitric oxides concentration (parts per 10 million)" required="required"/>
-            <input type="text" name="rm" placeholder="Average number of rooms per dwelling" required="required"/>
-            <input type="text" name="age" placeholder="Proportion of owner-occupied units built prior to 1940" required="required"/>
-            <input type="text" name="dis" placeholder="Weighted distances to five Boston employment centres" required="required"/>
-            <input type="text" name="rad" placeholder="Index of accessibility to radial highways" required="required"/>
-            <input type="text" name="tax" placeholder="Full-value property-tax rate per $10,000" required="required"/>
-            <input type="text" name="ptratio" placeholder="Pupil-teacher ratio by town" required="required"/>
-            <input type="text" name="b" placeholder="1000(Bk - 0.63)^2 where Bk is the proportion of blacks 
-            by town" required="required"/>
-            <input type="text" name="lstat" placeholder="% lower status of the population" required="required"/>
-            <button type="submit" class="btn btn-primary btn-block btn-large" >Predict Price</button> 
-        </form>
-        <br>
-        <br>
-        {{prediction_text}}    
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Real Estate Price Prediction Model</title>
+    <!-- <link rel="stylesheet" href="{{url_for('static',filename='css/new_css.css')}}"> -->
+    <style>
+        h1 {
+            text-align: center;
+        }
+      form input {
+        display: block;
+        width: 90%;
+        margin: 15px auto;
+        height: 25px;
+      }
+
+      form button {
+          display: block;
+        width: 90%;
+        margin: auto;
+        height: 30px;
+      }
+    </style>
+  </head>
+  <body
+    style="background-image: url({{url_for('static',filename='img/real_estate.jpg')}})"
+  >
+    <h1>Real Estate Price Predictions</h1>
+    <form action="{{url_for('predict')}}" method="post">
+      <input
+        type="text"
+        name="crim"
+        placeholder="Crime rate per capita"
+        required="required"
+      />
+      <input
+        type="text"
+        name="zn"
+        placeholder="Proportion of residential land zoned for lots over 
+            25,000 sq.ft."
+        required="required"
+      />
+      <input
+        type="text"
+        name="indus"
+        placeholder="Proportion of non-retail business acres per town"
+        required="required"
+      />
+      <input
+        type="text"
+        name="chas"
+        placeholder="Charles River dummy variable (= 1 if tract bounds 
+            river; 0 otherwise)"
+        required="required"
+      />
+      <input
+        type="text"
+        name="nox"
+        placeholder="Nitric oxides concentration (parts per 10 million)"
+        required="required"
+      />
+      <input
+        type="text"
+        name="rm"
+        placeholder="Average number of rooms per dwelling"
+        required="required"
+      />
+      <input
+        type="text"
+        name="age"
+        placeholder="Proportion of owner-occupied units built prior to 1940"
+        required="required"
+      />
+      <input
+        type="text"
+        name="dis"
+        placeholder="Weighted distances to five Boston employment centres"
+        required="required"
+      />
+      <input
+        type="text"
+        name="rad"
+        placeholder="Index of accessibility to radial highways"
+        required="required"
+      />
+      <input
+        type="text"
+        name="tax"
+        placeholder="Full-value property-tax rate per $10,000"
+        required="required"
+      />
+      <input
+        type="text"
+        name="ptratio"
+        placeholder="Pupil-teacher ratio by town"
+        required="required"
+      />
+      <input
+        type="text"
+        name="b"
+        placeholder="1000(Bk - 0.63)^2 where Bk is the proportion of blacks 
+            by town"
+        required="required"
+      />
+      <input
+        type="text"
+        name="lstat"
+        placeholder="% lower status of the population"
+        required="required"
+      />
+      <button type="submit" class="btn btn-primary btn-block btn-large">
+        Predict Price
+      </button>
+    </form>
+    <br />
+    <br />
+    <p>{{prediction_text}}</p>
+  </body>
 </html>
