Modified the Heading

--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,9 @@
     <!-- <link rel="stylesheet" href="{{url_for('static',filename='css/new_css.css')}}"> -->
     <style>
         h1 {
-            text-align: center;
+          color: #532424;
+          font-family: serif;
+          text-align: center;
         }
       form input {
         display: block;
